# CodonSoup

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.client  Dockerfile.server  Makefile  README.md  REQUIREMENTS_NOTE.md  agents.md  docker-compose.yml  pyproject.toml  requirements-client.txt  requirements-server.txt
.github/workflows/: docker.yml  lint.yml
client/: client.py  organism.py  world.py
gha/: README.md  docker.yml  tests.yml
k8s/: client-replicaset.yaml
server/: server.py
server/templates/: dashboard.html
tests/client/: test_organism.py  test_world.py
tests/server/: test_server.py
